Falta hacer refresh a la pagina al eliminar una foto

--- a/collage.html
+++ b/collage.html
@@ -10,7 +10,7 @@
   <div class=""><a href="/deleteImg/imagen-7.jpg">7</a></div>
   <div class=""><a href="/deleteImg/imagen-8.jpg">8</a></div>
 </div>
-<br />
+<br>
 <a href="/"><button>Subir otra imagen</button></a>
 <style>
   body {
@@ -67,7 +67,7 @@
     align-items: center;
   }
   .grid-container div:nth-child(1) {
-    background-image: url('./imgs/imagen-1.jpg');
+    background-image: url(imgs/imagen-1.jpg);
   }
   .grid-container div:nth-child(2) {
     background-image: url(imgs/imagen-2.jpg);
